<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Techlab HR</string>
    <string name="menu">This is a drawer</string>
    <string name="title_activity_login">Techlab HR</string>
    <string name="title_activity_main">Inventaris</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_repeat">Repeat password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">Don\'t have an account yet? Register <u>here</u>.</string>
    <string name="action_register_short">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_password_match">The password does not match</string>
    <string name="error_email_already_exists">This email address is already used</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_nav_drawer">NavDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Techlab HR</string>
    <string name="nav_header_subtitle">Wijnhaven 107 WD 04.21 (or 19, something like that)</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_settings">Settings</string>
    <string name="action_winkelmandje">Winkelmandje</string>
    <string name="title_activity_winkelmandje">Winkelmandje</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="fragment_inventaris">Inventaris</string>
    <string name="fragment_winkelmandje">Winkelmandje</string>
    <string name="fragment_informatie">Informatie</string>
    <string name="openingstijden">Openingstijden</string>

    <string name="informatie_over_text">TechLab HR is een instelling van de Hogeschool Rotterdam. Het doel van het TechLab is om de behoeftes van CMI studenten te voorzien. Bij het TechLab kan je verschillende apparaten lenen voor creatieve doeleinden. TechLab is te gebruiken door alle studenten en personeel aan de Hogeschool Rotterdam</string>
    <string name="informatie_contact_text">U kunt contact opnemen met het TechLab tijdens de openingstijden via Tel: 06-1234567, of via TechLab@hr.nl</string>
    <string name="openings_tijden_kop">Openingstijden</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="make_json_object_request">Make JSON Object Request</string>
    <string name="product_id">Product ID</string>
    <string name="product_name">Product Name</string>
    <string name="product_manufacturer">Product Manufacturer</string>
    <string name="category">Category</string>
    <string name="stock">Stock</string>
    <string name="create_and_add_product">Create and add Product</string>
    <string name="product_toevoegen">Product Toevoegen</string>
    <string name="product_wijzigen">Product Wijzigen/Verwijderen</string>

    <string name="cat_virtual">Virtual Reality</string>
    <string name="cat_console">Gameconsole</string>
    <string name="cat_micro">MicroComputer</string>
    <string name="cat_drone">Drone</string>
    <string name="cat_rc">Radio Controlled</string>
    <string name="cat_game">Game</string>
    <string name="cat_smart">Smart Technology</string>
    <string name="cat_cables">Kabels</string>
    <string name="cat_computer">Computer</string>
    <string name="cat_internet">Internet</string>

    <string name="salt">MyNameIsSalt</string>

    <string name="maandag">Maandag</string>
    <string name="ma_10_30_17_00">10:30 - 17:00</string>
    <string name="donderdag">Donderdag</string>
    <string name="do_10_30_17_00">10:30 - 17:00</string>
    <string name="dinsdag">Dinsdag</string>
    <string name="di_10_30_15_50">10:30 - 15:50</string>
    <string name="woensdag">Woensdag</string>
    <string name="wo_10_30_15_50">10:30 - 15:50</string>
    <string name="locatie">Locatie</string>
    <string name="vrijdag">Vrijdag</string>
    <string name="contact">Contact</string>
    <string name="gesloten">Gesloten</string>
    <string name="Informatie_locatie">TechLab is gevestigd op de HR locatie Wijnhaven 107. In lokaal WD.04.022.</string>

    <string name="add_to_cart">Add to Cart</string>
    <string name="amountbroken">AmountBroken</string>
    <string name="email">Email</string>
    <string name="one">1</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="amount" tools:ignore="ExtraTranslation">Amount</string>
    <string name="checkMe">I agree with the Terms and Conditions</string>

    <string name="sharedPreferenceKey">groep3.hr.nl.techlabhr.PREFFERENCE_FILE_KEY</string>
    <string name="MarkOrderReady">Markeer order als ready for pickup</string>
    <string name="MarkOrderHandedIn">Markeer order als ingeleverd</string>
    <string name="markeer_order_als_opgehaald">Markeer order als opgehaald</string>
    <string name="markeer_order_als_ingeleverd">Markeer Order als Ingeleverd</string>
    <string name="markeer_order_als_afgegeven">Markeer Order als afgegeven</string>
    <string name="wijs_order_af">Wijs Order Af</string>
    <string name="selecteer_een_datum">Selecteer een datum</string>
    <string name="log_out" tools:ignore="ExtraTranslation">Log out</string>
    <string name="profile" tools:ignore="ExtraTranslation">Profile</string>

</resources>
