<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_profile"
        android:orderInCategory="100"
        android:title="@string/profile"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="101"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_log_out"
        android:orderInCategory="102"
        android:title="@string/log_out"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_winkelmandje"
        android:orderInCategory="100"
        android:title="@string/action_winkelmandje"
        android:icon="@drawable/ic_action_winkel"
        app:showAsAction="ifRoom" />
</menu>
