<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <Button
        android:id="@+id/btnSetOrderReady"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/MarkOrderReady" />

    <Button
        android:id="@+id/btnSetOrderPickedUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        android:backgroundTint="@color/design_default_color_primary_dark"
        android:text="@string/markeer_order_als_opgehaald"
        />

    <Button
        android:id="@+id/btnSetOrderHandedIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        android:backgroundTint="@color/cardview_dark_background"
        android:text="@string/MarkOrderHandedIn"
        />




</LinearLayout>